# mechanical-engineering-metrology-and-measurements

./: .buildinfo  .gitignore  README.md  build_upload.bat  build_upload.sh  config.json  genindex.html  index.html  index.json  intro-1.json  intro-2.json  intro-3.json  intro-4.json  intro-5.json  intro-6.json  intro.html  intro.json  intro.qmd  myst.search.json  myst.xref.json  myst.yml  objects.inv  pyproject.toml  search.html  search.json  searchindex.js  weight-scale-example-wheeler.json
.github/: workflow.yml
_sources/: intro.md
a2d/: Reconstruction_periodic_signal_Cardinal_series.html  create_plot_signal.html  create_plot_signal.qmd  index.html  intro.html  intro.qmd  mimic_analog_to_digital_conversion.html  reconstruct_with_sinc.html  sampling_aliasing_examples.html
archive/: intro.html  markdown-notebooks.html  markdown.html  notebook.html
book/: _toc copy.yml  _toc.yml
calibration/: Lineariy_error_example.html  calibration_curve_log_log.html  calibration_error_analysis 2.html  calibration_error_analysis_pressure.html  calibration_error_analysis_pressure.qmd  calibration_non_linear_relations.html  full_calibration_analysis_example.html  hysteresis_error_analysis.html  index.html  intro.html  introduction_linear_regression.html  lvdt_calibration_2.html  lvdt_calibration_2.qmd  lvdt_calibration_example.html  micrometer_calibration.html  pressure_calibration_example.html  regression_analysis.html  sensitivity_analysis.html  weight_scale_example_Wheeler.html
data/: index.html
dynamic_signals/: 2nd_order_system_step_function_log_decrement.html  index.html  (+15 more)
(+306 files in other folders)
